--- a/app/globals.css
+++ b/app/globals.css
@@ -62,3 +62,18 @@ input[type=number]{
   @apply w-full md:w-[280px] h-[70px] p-2 border rounded-md placeholder-black;
 }
 }
+
+.animate-fade-in {
+  animation: fadeIn 0.5s ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
